--- a/practice/p13/style.css
+++ b/practice/p13/style.css
@@ -132,16 +132,30 @@ button:disabled {
   background: #ffffff;
   box-shadow: 0px 4px 15px rgba(18, 23, 42, 0.1);
   display: flex;
-  align-items: center;
-
+  /* align-items: center; */
+  justify-content: flex-end;
 
 }
 
+.flight-card .ticket{
+  
+  flex-grow: 1;
+}
 
-.flight-card > .cabin {
+.flight-card .cabin {
   width: 147px;
+  /* height: 1em; */
+  display: flex;
   border-left: 1px solid #e5e9f3;
+  justify-content: center;
+  align-items: center;
 }
+.cabin .con{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 
 .ticket-label {
   margin: 0;
@@ -160,11 +174,14 @@ button:disabled {
   padding: 24px 24px 32px;
   color: #1a345e;
   font-weight: 700;
-
+  
   flex-direction: column;
 
 }
 
+.label.smallTime{
+  text-align: center;
+}
 .flight-card .label {
   margin-bottom: 8px;
   color: #b6bfd3;
@@ -176,6 +193,8 @@ button:disabled {
 .flight-card .departure-arrival {
   font-weight: 700;
   display: flex;
+
+  justify-content: space-between;
 
 
 }
