--- a/Weekly_mission/style.css
+++ b/Weekly_mission/style.css
@@ -95,10 +95,6 @@ main .intro .addlink{
 
 }
 
-/* main .intro .img_space{
-  width: 1200px;
-  height: 590px;
-} */
 
 main .intro img{
 
@@ -163,6 +159,15 @@ main .content{
   background-clip: text;
   -webkit-background-clip: text;
 }
+
+
+
+.frame .texts.sky_blur{
+  background: var(--fandom-k-gra-blue-to-pink, linear-gradient(271deg, #FE578F -9.84%, #68E8F9 107.18%));
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
 .frame .texts h2 span{
   -webkit-text-fill-color: transparent;
 }
@@ -183,23 +188,52 @@ main .content{
   background: #F0F6FF;
 }
 
-.frame img.overlap_back{
 
-  width: 570px;
-  height: 469px;
+footer{
+  display: flex;
+  height: 280px;
+  padding-top: 120px;
+  flex-direction: column;
+  align-items: center;
+  align-self: stretch;
+}
+
+
+footer .frame{
+  display: flex;
+  height: 160px;
+  padding: 32px 104px 64px 104px;
+  flex-direction: column;
+  align-items: center;
   flex-shrink: 0;
-  border-radius: 25px;
-  background: rgba(0, 0, 0, 0.40);
-  box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.08);
+  align-self: stretch;
+  background: var(--the-julge-black, #111322);
+}
+
+
+footer .frame .footer_element{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  align-self: stretch;
+  font-family: Arial;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+footer .frame .footer_element .codeit_2023{
+  color: #676767;
+  text-align: center;
 
 }
 
-.frame img.overlap_front{
-  top:121px;
-  width: 416px;
-  height: 271px;
-  flex-shrink: 0;
-  background: url("images/img4.png"), lightgray 50% / cover no-repeat;
-
+footer .frame .footer_element .extra_info{
+  color: #CFCFCF;
+  display: flex;
+  width: 181.111px;
+  align-items: flex-start;
+  gap: 30px;
 
 }
