--- a/Weekly_mission/style.css
+++ b/Weekly_mission/style.css
@@ -13,7 +13,7 @@ body {
 
 header{
   display: flex;
-  padding: 20px 200px;
+  padding: 1.25rem 12.5rem;
   flex-direction: column;
   align-items: center;
   gap: 0.5rem;
@@ -48,7 +48,7 @@ header .login{
   line-height: normal;
   display: flex;
   width: 8rem;
-  padding: 16px 20px;
+  padding: 1rem 1.25rem;
   justify-content: center;
   align-items: center;
   gap: 0.625rem;  
@@ -59,7 +59,7 @@ header .login{
 
 main .intro{
   display: flex;
-  padding: 70px 360px 0px 360px;
+  padding: 4.375rem 22.5rem 0rem 22.5rem;
   flex-direction: column;
   justify-content: flex-end;
   background: #F0F6FF;
@@ -74,7 +74,7 @@ main .intro h1{
   font-size: 4rem;
   font-style: normal;
   font-weight: 700;
-  line-height: 80px; 
+  line-height: 5rem; 
 
  
 }
@@ -88,7 +88,7 @@ main .intro h1 span{
 main .intro .addlink{
   display: flex;
   width: 21.875;
-  padding: 16px 20px;
+  padding: 1rem 1.25rem;
   justify-content: center;
   align-items: center;
   gap: 0.625rem;
@@ -118,7 +118,7 @@ main .intro img{
 
 main .content{
   display: flex;
-  padding: 120px 461px 50px 461px;
+  padding: 7.5rem 28.8125rem 3.125rem 28.8125rem;
   justify-content: center;
   align-items: center;
   
@@ -147,7 +147,7 @@ main .content{
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  letter-spacing: -0.3px;
+  letter-spacing: -0.0187rem;
 
 }
 
@@ -201,7 +201,7 @@ main .content{
 footer{
   display: flex;
   height: 17.5rem;
-  padding-top: 120px;
+  padding-top: 7.5rem;
   flex-direction: column;
   align-items: center;
   align-self: stretch;
@@ -211,7 +211,7 @@ footer{
 footer .frame{
   display: flex;
   height: 10rem;
-  padding: 32px 104px 64px 104px;
+  padding: 2rem 6.5rem 4rem 6.5rem;
   flex-direction: column;
   align-items: center;
   flex-shrink: 0;
